--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -13,12 +13,10 @@ achievements:
 - title: Near Certified Developer
   image: /images/sections/achievements/Near-Certified-Developer.jpg
   summary: I presented my developed application and was eligible to receive Nft a Near Developer Certificate.
-- title: Champion
+- title: Participant
   image: /images/sections/achievements/sport.jpg
-  summary: Champion in cycling inter-city cycling championship 2020.
-- title: Graduation
+  summary: Solana Hacker House İstanbul
+- title: Participant
   image: /images/sections/achievements/graduation-cap.jpg
-  summary: Received Bachelor of Science (B.Sc.) in Computer Science and Engineer from XYZ University.
-- title: Award Winner
-  image: /images/sections/achievements/woman-winner.jpg
-  summary: Wined best paper award at IEE Conference 2020.
+  summary: Solana Hacker House İstanbul
+
