--- a/data/en/sections/accomplishments.yaml
+++ b/data/en/sections/accomplishments.yaml
@@ -24,7 +24,7 @@ accomplishments:
   organization:
     name: Coursera
     url: https://www.coursera.org
-  courseOverview: Bu ders, makine öğrenimi, veri madenciliği ve istatistiksel örüntü tanımaya geniş bir giriş sağlar. Konular şunları içerir: (i) Denetimli öğrenme (parametrik/parametrik olmayan algoritmalar, destek vektör makineleri, çekirdekler, sinir ağları). (ii) Denetimsiz öğrenme (kümeleme, boyutluluk azaltma, öneri sistemleri, derin öğrenme). (iii) Makine öğrenimindeki en iyi uygulamalar (yanlılık/varyans teorisi; makine öğreniminde ve yapay zekada yenilik süreci)."
+  courseOverview: "Bu ders, makine öğrenimi, veri madenciliği ve istatistiksel örüntü tanımaya geniş bir giriş sağlar. Konular şunları içerir: (i) Denetimli öğrenme (parametrik/parametrik olmayan algoritmalar, destek vektör makineleri, çekirdekler, sinir ağları). (ii) Denetimsiz öğrenme (kümeleme, boyutluluk azaltma, öneri sistemleri, derin öğrenme). (iii) Makine öğrenimindeki en iyi uygulamalar (yanlılık/varyans teorisi; makine öğreniminde ve yapay zekada yenilik süreci)."
   certificateURL: "https://example.com"
 
  
