--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -11,15 +11,30 @@ section:
 ## Your experiences
 experiences:
 - company:
-    name: "SaveAs Yazılım A.Ş"
+    name: "SaveAs Yazılım "
     url: "https://www.saveas.com.tr/"
     location: "İstanbul"
     overview: "Saveas Yazılım, yazılım geliştirme ve dijital dönüşüm hizmetleri veren bir teknoloji firmasıdır. Şimdiye kadar başarıyla tamamladığı yüzlerce yazılım projesi, e-ticaret siteleri, mobil uygulama projeleri, holdinglerden kobilere kadar hizmet veren kurumsal kaynak planlama projeleri ile çalışmalarına devam etmektedir."
   positions:
-  - designation: Mobile Developer - (React Native)
+  - designation: Software Engineer - (React Native)
     start: Ocak 2023
+    end: Mart 2023
+    responsibilities:
+    - Uygulama hatalarının giderilmesi.
+    - Yeni özelliklerin eklenmesi.
+    - Optimizasyonların yapılması.
+
+- company:
+    name: "İnfina Yazılım A.Ş"
+    url: "https://infina.com.tr/"
+    location: "İstanbul"
+    overview: "İnfina Yazılım, varlık yönetimi ile portföy saklama yazılımları konusunda sektörünün lider firmasıdır.İnfina Yazılım A.Ş. ürünlerini piyasa talepleri doğrultusunda sürekli geliştirerek yatırım bankacılığı konusundaki faaliyetlerini inovatif yaklaşımıyla sürdürmeyi hedeflemektedir."
+  positions:
+  - designation: Software Engineer - (React Native)
+    start: Mart 2023
     end: Devam
     responsibilities:
     - Uygulama hatalarının giderilmesi.
     - Yeni özelliklerin eklenmesi.
     - Optimizasyonların yapılması.
+
