--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -16,7 +16,7 @@ experiences:
     location: " Çekmeköy, İstanbul"
     overview: "Saveas Yazılım, yazılım geliştirme ve dijital dönüşüm hizmetleri veren bir teknoloji firmasıdır. Şimdiye kadar başarıyla tamamladığı yüzlerce yazılım projesi, e-ticaret siteleri, mobil uygulama projeleri, holdinglerden kobilere kadar hizmet veren kurumsal kaynak planlama projeleri ile çalışmalarına devam etmektedir."
   positions:
-  - designation: Software Engineer - (React Native)
+  - designation: Software Engineer
     start: Ocak 2023
     end: Mart 2023
     responsibilities:
@@ -30,7 +30,7 @@ experiences:
     location: " Üsküdar, İstanbul"
     overview: "İnfina Yazılım, varlık yönetimi ile portföy saklama yazılımları konusunda sektörünün lider firmasıdır. İnfina Yazılım A.Ş. ürünlerini piyasa talepleri doğrultusunda sürekli geliştirerek yatırım bankacılığı konusundaki faaliyetlerini inovatif yaklaşımıyla sürdürmeyi hedeflemektedir."
   positions:
-  - designation: Software Engineer - (React Native)
+  - designation: Software Engineer
     start: Mart 2023
     end: Devam
     responsibilities:
