--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -6,14 +6,13 @@ greeting: "Merhaba, Ben"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "mehmetaliozdogan@stu.ayvansaray.edu.tr"
-  phone: "+90-545-345-47-31"
+  email: "mehmetaliozdogan@stu.topkapi.edu.tr"
 
 # some summary about what you do
 summary:
-  - Yazılım Mühendisliği Öğrencisiyim
-  - Şu an C++ öğreniyorum  
-  - Küçük, eğlenceli projeler üzerinde çalışmayı seviyorum
+  - Yazılım Mühendisi olarak çalışıyorum
+  - Full Stack olarak çalışmayı seviyorum 
+  - React ve React Native ile geliştirme yapıyorum 
+  - Cross platformlar üzerinde çalışmayı seviyorum
   - Özgür uygulamalar geliştiriyorum
   - Linux ile çalışmayı seviyorum
-  - Mobil programlama üzerinde çalışıyorum
