--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -35,11 +35,26 @@ skills:
   logo: /images/sections/skills/React-Native.png
   summary: "React Native ile mobil uygulama geliştiriyorum. Redux thunk ve persist ile state durumlarını kontrol edebiliyorum. MongoDB ve Mysql veritabanı ile çalışıyorum. Gradle ve Pod ile çalışma deneyimine sahibim. Ios ve Android Markete yükleme yapabiliyorum."
   url: "https://reactnative.dev/"
-  
+
 - name: Node.js
   logo: /images/sections/skills/NodeJs.png
   summary: "Node.js ile Backend api geliştiriyorum. Express, Joi, Nodemon ve Json web token yapılarını kullandım."
   url: "https://nodejs.org/en/docs/"
+
+- name: Redux
+  logo: /images/sections/skills/redux-logo.png
+  summary: "Redux-toolkit ile state durumlarını kontrol edip, action, reducers ve store yapısı halinde kullanabiiyorum, thunk ve persist ile state durumlarını tutabiliyorum."
+  url: "https://redux.js.org/"
+  
+- name: Javasript
+  logo: /images/sections/skills/javascript.png
+  summary: "Javascript diline genel olarak hakimim, React ve React Native frameworklerinde aktif olarak kullanıyorum, Node.js ile geliştirme tecrübesine sahibim."
+  url: "https://www.javascript.com/"
+
+- name: TypeScript
+  logo: /images/sections/skills/typeScript.com.png
+  summary: "TypeScript dilini öğrenmeye çalışıyorum, React ve React Native frameworklerinde aktif olarak kullanıyorum, Type Safety sağlamaya çalışıyorum."
+  url: "https://www.javascript.com/"
 
 - name: MySQL
   logo: /images/sections/skills/MySQL.png
@@ -60,3 +75,13 @@ skills:
   logo: /images/sections/skills/Near.png
   summary: "Near Geliştirici Sertifikasına sahibim. Near ağı üzerinde Web 3.0 çözümleri üretebiliyorum. Rust dilinde Smart Contract oluşturup Web projelerine entegre edebiliyorum.Near ağında işletim sistemi olarak Linux, Backend olarak Rust, frontend olarak React kullanıyoruz."
   url: "https://near.org/"
+
+- name: Jest
+  logo: /images/sections/skills/jest.png
+  summary: "Jest ile react ve react native komponentleri için unit test yazabiliyorum."
+  url: "https://jestjs.io/"
+
+- name: Selenium
+  logo: /images/sections/skills/selenium.png
+  summary: "Selenium ile sayfaların davranışlarının tetiklenmesi için test senaryoları ve adımları yazabiliyorum."
+  url: "https://www.selenium.dev/"
