--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -61,9 +61,14 @@ skills:
   summary: "Near Geliştirici Sertifikasına sahibim. Near ağı üzerinde Web 3.0 çözümleri üretebiliyorum. Rust dilinde Smart Contract oluşturup Web projelerine entegre edebiliyorum.Near ağında işletim sistemi olarak Linux, Backend olarak Rust, frontend olarak React kullanıyoruz."
   url: "https://near.org/"
   
-- name: Redux
-  logo: /images/sections/skills/redux-logo.png
-  summary: "Redux-toolkit ile state durumlarını kontrol edip, action, reducers ve store yapısı halinde kullanabiiyorum, thunk ve persist ile state durumlarını tutabiliyorum."
-  url: "https://redux.js.org/"
+- name: Javasript
+  logo: /images/sections/skills/javascript.png
+  summary: "Javascript diline genel olarak hakimim, React ve React Native frameworklerinde aktif olarak kullanıyorum, Node.js ile geliştirme tecrübesine sahibim."
+  url: "https://www.javascript.com/"
+
+- name: TypeScript
+  logo: /images/sections/skills/typeScript.com.png
+  summary: "TypeScript dilini öğrenmeye çalışıyorum, React ve React Native frameworklerinde aktif olarak kullanıyorum, Type Safety sağlamaya çalışıyorum."
+  url: "https://www.javascript.com/"
  
 
