--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -34,7 +34,9 @@ experiences:
     start: Mart 2023
     end: Devam
     responsibilities:
+    - Foneva ile fon alım satım uygulaması
     - Uygulama hatalarının giderilmesi.
     - Yeni özelliklerin eklenmesi.
     - Optimizasyonların yapılması.
+
 
