--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -23,7 +23,7 @@ skills:
 
 - name: Swagger
   logo: /images/sections/skills/Swagger.png
-  summary: "Swagger ile RESTful API'lerin belgelendirilmesi ve test edilmesi konusunda deneyimim var."
+  summary: "Swagger ile REST API'lerin belgelendirilmesi ve test edilmesi konusunda deneyimim var."
   url: "https://swagger.io/"
 
 - name: React
@@ -43,7 +43,7 @@ skills:
 
 - name: Next.js
   logo: /images/sections/skills/nextjs-icon.png
-  summary: "Next.js ile React'ın gücünü kullanarak server-side tarafında daha kararlı uygulamalar geliştiriyorum. Kendimi bu frameworkte geliştirmeye yeni başladım."
+  summary: "Next.js ile React'ın gücünü kullanarak server-side tarafında daha kararlı uygulamalar geliştiriyorum."
   url: "https://nextjs.org/"
 
 - name: JavaScript
