--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -78,7 +78,7 @@ skills:
 
 - name: Selenium
   logo: /images/sections/skills/selenium.png
-  summary: "Selenium ile React ve React Native sayfalarına test senaryosu yazabiliyorum, chromedriver ile otomasyon testi ile testini sağlayabiliyorum."
+  summary: "Selenium ile React sayfalarına test senaryosu yazabiliyorum, chromedriver ile otomasyon testi ile testini sağlayabiliyorum."
   url: "https://www.selenium.dev/"
 
 - name: Near Protocol
