--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -18,32 +18,32 @@ skills:
 
 - name: Postman
   logo: /images/sections/skills/postman-icon.png
-  summary: "Postman ile JSON olarak Api tasarlama, oluşturma ve test etme işlemlerini yapıyorum."
+  summary: "API tasarımında ve testlerinde Postman'ı etkin bir şekilde kullanmaktayım. Kompleks API tasarımlarını hızlı ve etkili bir şekilde hayata geçirme konusunda deneyim sahibiyim."
   url: "https://www.postman.com/"
 
 - name: Swagger
   logo: /images/sections/skills/Swagger.png
-  summary: "Swagger ile REST API'lerin belgelendirilmesi ve test edilmesi konusunda deneyimim var."
+  summary: "REST API belgelendirmesinde Swagger'ın sağladığı kolaylık ve esnekliği sayesinde etkin ve anlaşılır API dokümantasyonları oluşturuyorum."
   url: "https://swagger.io/"
 
 - name: React
   logo: /images/sections/skills/React-Native.png
-  summary: "React ile frontend uygulamalar geliştiriyorum. Redux thunk ve persist ile state durumlarını kontrol edebiliyorum. Rest olarak verileri kullanabiliyorum. MongoDB ve Mysql veri tabanı ile çalışıyorum. TypeScript konusunda kendimi geliştirmeye çalışıyorum."
+  summary: "React ile geliştirdiğim modern ve kullanıcı dostu frontend uygulamalarıyla fark yaratıyorum. Redux Thunk ve Persist'in sağladığı avantajları kullanarak verimli state yönetimi yapabiliyorum. MongoDB ve MySQL veritabanlarıyla entegre projeler üretebiliyorum."
   url: "https://reactjs.org/"
 
 - name: React Native
   logo: /images/sections/skills/React-Native.png
-  summary: "React Native ile mobil uygulama geliştiriyorum. Redux-toolkit ile state durumlarını kontrol edebiliyorum. Redux thunk ve persist ile de state durumlarını local storage'de tutabiliyorum.  MongoDB ve Mysql veritabanı ile çalışıyorum. Gradle ve Pod ile çalışma deneyimine sahibim. Ios ve Android Markete yükleme yapabiliyorum."
+  summary: "React Native kullanarak geliştirdiğim cross-platform mobil uygulamalarla hem iOS hem de Android kullanıcılarına hitap edebiliyorum. Redux Toolkit kullanarak state yönetimini optimize ederken, MongoDB ve MySQL veritabanlarıyla birlikte çalışabiliyorum. Uygulamaları hem iOS hem de Android marketlere yükleyebiliyorum."
   url: "https://reactnative.dev/"
 
 - name: Node.js
   logo: /images/sections/skills/NodeJs.png
-  summary: "Node.js ile Backend api geliştiriyorum. Express, Joi, Nodemon ve Json web token yapılarını kullandım."
+  summary: "Backend tarafında Node.js kullanarak performansı yüksek API'ler geliştiriyorum. Express, Joi, Nodemon ve Json Web Token gibi araçları etkin bir şekilde kullanıyorum."
   url: "https://nodejs.org/en/docs/"
 
 - name: Next.js
   logo: /images/sections/skills/nextjs-icon.png
-  summary: "Next.js ile React'ın gücünü kullanarak server-side tarafında daha kararlı uygulamalar geliştiriyorum."
+  summary: "React'ın sunduğu tüm avantajları Next.js ile sunucu tarafına taşıyarak daha kararlı ve etkin uygulamalar geliştirmekteyim."
   url: "https://nextjs.org/"
 
 - name: JavaScript
@@ -53,35 +53,35 @@ skills:
 
 - name: TypeScript
   logo: /images/sections/skills/typeScript.png
-  summary: "React, React Native frameworklerini TypeScript standartları ile de kullanabiliyorum, TypeSafety sağlanması gereken projelerde kullanıyorum."
+  summary: "TypeSafety gerektiren projelerde TypeScript ile çalışmaktayım. Bu sayede hem hata oranını düşürüyor hem de kodların okunabilirliğini arttırıyorum."
   url: "https://www.typescriptlang.org/"
 
 - name: MySQL
   logo: /images/sections/skills/MySQL.png
-  summary: "MySQL veritabanı ile uygulamalarımın verilerini saklıyorum. Function Trigger ve Procedure yapılarını kullanıyorum."
+  summary: "MySQL ile robust ve güvenli veritabanları oluşturuyorum. Function, Trigger ve Procedure gibi özellikleri etkin şekilde kullanarak projelerimin veri ihtiyaçlarını karşılıyorum."
   url: "https://www.mysql.com/"
 
 - name: Firebase
   logo: /images/sections/skills/Firebase.png
-  summary: "Firebase veritabanı ile uygulamalarımın verilerini saklıyorum. Authenticate, Firestore database ve Realtime database yapılarını kullandım. Nosql veritabanı olarak kullanıyorum."
+  summary: "Firebase ile oluşturduğum veritabanlarıyla projelerimin hızlı ve etkin şekilde veri ihtiyaçlarını karşılıyorum. Auth, Firestore ve Realtime Database gibi hizmetlerini aktif olarak kullanıyorum."
   url: "https://firebase.google.com/"
 
 - name: MongoDB
   logo: /images/sections/skills/MongoDB.png
-  summary: "MongoDB veritabanı ile uygulamalarımın verilerini saklıyorum. MongoDB database ve Mongoose Schema yapılarını kullandım. Nosql veritabanı olarak kullanıyorum."
+  summary: "MongoDB ile non-relational veritabanları oluşturuyorum. Bu sayede projelerimin ölçeklenebilirlik ve veri entegrasyonu konusunda esneklik kazanmasını sağlıyorum."
   url: "https://www.mongodb.com/"
 
 - name: Jest
   logo: /images/sections/skills/jest.png
-  summary: "Jest ile React ve React Native komponentlerine unit test yazabiliyorum. Profesyonel projelerimizde geliştirme sonrası unit test yazmaya özen gösteriyoruz."
+  summary: "Jest ile React ve React Native uygulamalarıma unit testler yazabiliyorum. Böylece projelerimin kalitesini ve hatasız çalışabilme oranını arttırıyorum."
   url: "https://jestjs.io/"
 
 - name: Selenium
   logo: /images/sections/skills/selenium.png
-  summary: "Selenium ile React sayfalarına test senaryosu yazabiliyorum, chromedriver ile otomasyon testi ile testini sağlayabiliyorum."
+  summary: "Selenium ile React sayfaları için otomasyon test senaryoları yazabiliyorum. Bu sayede uygulamalarımın kullanıcı etkileşimlerini ve performansını test edebiliyorum."
   url: "https://www.selenium.dev/"
 
-- name: Near Protocol
-  logo: /images/sections/skills/Near.png
-  summary: "Near Geliştirici Sertifikasına sahibim. Near ağı üzerinde Web 3.0 çözümleri üretebiliyorum. Rust dilinde Smart Contract oluşturup Web projelerine entegre edebiliyorum.Near ağında işletim sistemi olarak Linux, Backend olarak Rust, frontend olarak React kullanıyoruz."
-  url: "https://near.org/"
+- name: Docker
+  logo: "https://www.docker.com/wp-content/uploads/2022/03/vertical-logo-monochromatic.png"
+  summary: "Docker sayesinde uygulamalarımı hızlı ve tutarlı bir şekilde dağıtabiliyorum. Çalışma ortamlarının standardizasyonunu sağlayarak takım içinde tutarlı bir geliştirme deneyimi sunuyorum. Ayrıca, Docker ile microservices mimarisini destekleyen ölçeklenebilir uygulamalar oluşturuyorum."
+  url: "https://www.docker.com/"
