--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -26,35 +26,17 @@ projects:
   role: Software Engineer
   timeline: "March 2023 -  June 2023"
   repo: https://www.foneva.co/ # If your project is a public repo on GitHub, then provide this link. it will show star count.
-  #url: "https://apps.apple.com/vn/app/foneva/id1668887276?uo=2"  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Foneva, bir mobil telefon alım-satım uygulamasıdır. ios ve android için geliştirmeler yaptım, bu projede yazılım mühendisi olarak görev aldım. Projeye yeni özellikler eklemek ve mevcut hataları düzeltmek gibi sorumluluklarım vardı.
-  tags: ["JavaScript", "React Native", "Java", "Spring Boot"]
-
-- name: Chat Uygulaması
-  logo: /images/sections/skills/React-Native.png
-  role: Developer
-  timeline: "September 2022 - February 2023"
-  repo: https://github.com/Mehmet346/Chat-Uygulamasi # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: React Native kullanarak yazıp Play Store'da yayınladım. Kimlik doğrulama, kayıt olma kısmı ve sohbet odaları oluşturdum. Firebase gerçek zamanlı veritabanı ve Socket.io kullandım.
-  tags: ["JavaScript", "React Native", "Firebase"]
+  summary: Foneva, bir fon alım-satım uygulamasıdır. ios ve android için geliştirmeler yaptım, bu projede yazılım mühendisi olarak görev aldım. Projeye yeni özellikler eklemek ve mevcut hataları düzeltmek gibi sorumluluklarım vardı.
+  tags: ["React Native", "Java", "Spring Boot"]
 
-- name: Bilgi Yarışması
-  logo: /images/sections/skills/flutter.png
-  role: Developer
-  timeline: "January 2022 - January 2022"
-  repo: https://github.com/Mehmet346/flutter_Bilgi_Yarismasi # If your project is a public repo on GitHub, then provide this link. it will show star count.
+- name: Suite Dlight
+  logo: /images/sections/projects/suite-logo.png
+  role: Software Engineer
+  timeline: "June 2023 -  Continues"
+  repo: https://infina.com.tr/analytics-bi-bussiness-intelligence.html # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Flutter'da zorluk derecelerine göre kategorilendirilmiş bilgi yarışması uygulaması yazdım. Firebase veritabanını kullandım.
-  tags: ["Dart", "Flutter", "Firebase"]
-
-- name: Web 3.0
-  logo: /images/sections/skills/Near.png
-  role: Developer
-  timeline: "February 2023"
-  repo:  https://github.com/Mehmet346/# If your project is a public repo on GitHub, then provide this link. it will show star count.
-  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Yakında...
-  tags: ["React", "Rust", "Firebase", "Near Protocol"]
+  summary: Suite, infina'da analytics ekibinin admin paneli için oluşturulan bir şirket için yönetim panelidir, Next.js kullanarak yazılıyor,bu projeyi geliştirmeye devam ediyorum.
+  tags: ["Next.js", "Java", "Spring Boot"]
   
 
