--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -14,14 +14,13 @@ experiences:
     name: "SaveAs Yazılım "
     url: "https://www.saveas.com.tr/"
     location: "İstanbul"
-    overview: "Saveas Yazılım, yazılım geliştirme ve dijital dönüşüm hizmetleri veren bir teknoloji firmasıdır. Şimdiye kadar başarıyla tamamladığı yüzlerce yazılım projesi, e-ticaret siteleri, mobil uygulama projeleri, holdinglerden kobilere kadar hizmet veren kurumsal kaynak planlama projeleri ile çalışmalarına devam etmektedir."
+    overview: "Saveas Yazılım, yazılım geliştirme ve dijital dönüşüm hizmetleri veren bir teknoloji firmasıdır."
   positions:
   - designation: Software Engineer
     start: Ocak 2023
     end: Mart 2023
     responsibilities:
     - Uygulama hatalarının giderilmesi.
-    - Yeni özelliklerin eklenmesi.
     - Optimizasyonların yapılması.
 
 - company:
@@ -35,6 +34,7 @@ experiences:
     end: Devam
     responsibilities:
     - Foneva ile fon alım satım uygulaması
+    - Suite Dlight analytics uygulaması
     - Uygulama hatalarının giderilmesi.
     - Yeni özelliklerin eklenmesi.
     - Optimizasyonların yapılması.
