--- a/data/en/sections/accomplishments.yaml
+++ b/data/en/sections/accomplishments.yaml
@@ -19,13 +19,13 @@ accomplishments:
   courseOverview: Near Geliştirici Sertifikası eğitiminde Andrés Dominguez, Juan Enrique Peña Haaz ve Maria Eugenia Arevalo Lizardo ile Near ağında ve Rust dilinde akıllı sözleşme oluşturmayı ve React ile ön uca aktarmayı öğrendik. Canlı eğitim sonunda geliştirdiğim uygulamamı sundum ve Nft a Near Geliştirici Sertifikası almaya hak kazandım.
   certificateURL: "https://paras.id/token/x.paras.near::481204/481204%3A1"
 
-- name: Makine Öğrenmesi
-  timeline: "Jun 2021 - Jan 2022"
-  organization:
-    name: Coursera
-    url: https://www.coursera.org
-  courseOverview: "Bu ders, makine öğrenimi, veri madenciliği ve istatistiksel örüntü tanımaya geniş bir giriş sağlar. Konular şunları içerir: (i) Denetimli öğrenme (parametrik/parametrik olmayan algoritmalar, destek vektör makineleri, çekirdekler, sinir ağları). (ii) Denetimsiz öğrenme (kümeleme, boyutluluk azaltma, öneri sistemleri, derin öğrenme). (iii) Makine öğrenimindeki en iyi uygulamalar (yanlılık/varyans teorisi; makine öğreniminde ve yapay zekada yenilik süreci)."
-  certificateURL: "https://example.com"
+#- name: Makine Öğrenmesi
+#  timeline: "Jun 2021 - Jan 2022"
+#  organization:
+#    name: Coursera
+#    url: https://www.coursera.org
+#  courseOverview: "Bu ders, makine öğrenimi, veri madenciliği ve istatistiksel örüntü tanımaya geniş bir giriş sağlar. Konular şunları içerir: (i) Denetimli öğrenme (parametrik/parametrik olmayan algoritmalar, destek vektör makineleri, çekirdekler, sinir ağları). (ii) Denetimsiz öğrenme (kümeleme, boyutluluk azaltma, öneri sistemleri, derin öğrenme). (iii) Makine öğrenimindeki en iyi uygulamalar (yanlılık/varyans teorisi; makine öğreniminde ve yapay zekada yenilik süreci)."
+#  certificateURL: "https://example.com"
 
  
 
