--- a/config.yaml
+++ b/config.yaml
@@ -62,10 +62,10 @@ params:
       enable: true
     # Enable and configure blog posts
     blog:
-      enable: false
+      enable: true
     # Enable & configure "Notes" features
     notes:
-      enable: false
+      enable: true
 
 
   # specify whether you want to show Table of Contents in reading page
